# Thermostat

./: Cargo.toml  client.py  ctl --user tree org.HCPanel.Thermostat  hass.sh  hcpanel.sh  refresher.py  rest-server.py  rest-server2.py  webserver.py
src/: dbus_server.rs  main.rs
