[package]
name = "thermostat"
version = "0.1.0"
authors = ["pi"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.2.1"
bme280 = "0.2.1"
zbus = "1.9.2"
zbus_macros = "1.9.2"
glob = "0.3.0"
regex = "1.5.4"
# linux-embedded-hal = { version = "0.3", features = ["gpio_cdev"] }
linux-embedded-hal = "0.3"
json = "0.12.4"